--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -65,7 +65,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 18   | Available          |                                                                                                               |
 | 19   | Available          |                                                                                                               |
 | 20   | Available          |                                                                                                               |
-| 21   | Available          |                                                                                                               |
+| 21   | **Shaun Lawrence**          |    Coming soon!                                                                                                           |
 | 22   | Available          |                                                                                                               |
 | 23   | Available          |                                                                                                               |
 | 24   | Available          |                                                                                                               |
