--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -53,7 +53,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 5    | Available          |                                                                                                               |
 | 6    | Available          |                                                                                                               |
 | 7    | Available          |                                                                                                               |
-| 8    | Available          |                                                                                                               |
+| 8    | **Sebastian Jensen**          | Coming soon!                                                                                                              |
 | 9    | Available          |                                                                                                               |
 | 10   | Available          |                                                                                                               |
 | 12   | Available          |                                                                                                               |
@@ -64,7 +64,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 17   | Available          |                                                                                                               |
 | 18   | Available          |                                                                                                               |
 | 19   | Available          |                                                                                                               |
-| 20   | Available          |                                                                                                               |
+| 20   | **Almir Vuk**          |      Coming soon!                                                                                                         |
 | 21   | **Shaun Lawrence**          |    Coming soon!                                                                                                           |
 | 22   | Available          |                                                                                                               |
 | 23   | Available          |                                                                                                               |
