--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -61,7 +61,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 14   | Available          |                                                                                                               |
 | 15   | Available          |                                                                                                               |
 | 16   | Available          |                                                                                                               |
-| 17   | Available          |                                                                                                               |
+| 17   | **Leomaris Reyes**          | Coming soon!                                                                                                              |
 | 18   | Available          |                                                                                                               |
 | 19   | Available          |                                                                                                               |
 | 20   | **Almir Vuk**          |      Coming soon!                                                                                                         |
