Revert "Added DM"

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -75,7 +75,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 28   | **Donald Peder**          |   Coming soon!                                                                                                            |
 | 29   | Available          |                                                                                                               |
 | 30   | Available          |                                                                                                               |
-| 31   | **Daniel Monettelli**          |       Coming soon!                                                                                                        |
+| 31   | Available          |                                                                                                               |
 {: .goldie-table }
 
 I hope you enjoy .NET MAUI UI July!
