--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -69,7 +69,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 22   | Available          |                                                                                                               |
 | 23   | **Luis Beltran**          |      Coming soon!                                                                                                         |
 | 24   | **Héctor Pérez Rojas**          |         Coming soon!                                                                                                      |
-| 25   | Available          |                                                                                                               |
+| 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
 | 26   | Available          |                                                                                                               |
 | 27   | Available          |                                                                                                               |
 | 28   | **Donald Peder**          |   Coming soon!                                                                                                            |
