--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -60,7 +60,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 12   | Available          |                                                                                                               |
 | 14   | Available          |                                                                                                               |
 | 15   | Available          |                                                                                                               |
-| 16   | Available          |                                                                                                               |
+| 16   | **Roman Jašek**          |     Coming soon!                                                                                                          |
 | 17   | **Leomaris Reyes**          | Coming soon!                                                                                                              |
 | 18   | Available          |                                                                                                               |
 | 19   | Available          |                                                                                                               |
