--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -66,7 +66,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 19   | Available          |                                                                                                               |
 | 20   | **Almir Vuk**          |      Coming soon!                                                                                                         |
 | 21   | **Shaun Lawrence**          |    Coming soon!                                                                                                           |
-| 22   | Available          |                                                                                                               |
+| 22   | **Vladislav Antonyuk**          |       Coming soon!                                                                                                        |
 | 23   | **Luis Beltran**          |      Coming soon!                                                                                                         |
 | 24   | **Héctor Pérez Rojas**          |         Coming soon!                                                                                                      |
 | 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
