Updated Donald's details

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -72,7 +72,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
 | 26   | Available          |                                                                                                               |
 | 27   | Available          |                                                                                                               |
-| 28   | **Donald Peder**          |   Coming soon!                                                                                                            |
+| 28   | **Smartman Apps**          |   Creating MAUI UIs in C#                                                                                                            |
 | 29   | Available          |                                                                                                               |
 | 30   | Available          |                                                                                                               |
 | 31   | **Daniel Monetelli**          | Coming soon!                                                                                                              |
