added link to my post, added Andreas

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -46,7 +46,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 
 | Date | Person             | Content                                                                                                       |
 | ---- | ------------------ | ------------------------------------------------------------------------------------------------------------- |
-| 1    | **Matt Goldman**          |   How to organise your handlers (coming soon!)                       |
+| 1    | **Matt Goldman**          |   [How to organise your handlers](/posts/maui-handler-mappings)                       |
 | 2    | Available          |                                                                                                               |
 | 3    | Available          |                                                                                                               |
 | 4    | Available          |                                                                                                               |
@@ -55,7 +55,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 7    | Available          |                                                                                                               |
 | 8    | **Sebastian Jensen**          | Coming soon!                                                                                                              |
 | 9    | Available          |                                                                                                               |
-| 10   | Available          |                                                                                                               |
+| 10   | Andreas Nesheim          |     Coming soon!                                                                                                          |
 | 12   | Available          |                                                                                                               |
 | 12   | Available          |                                                                                                               |
 | 14   | Available          |                                                                                                               |
