Added seb's post

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -53,9 +53,9 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 5    | Available          |                                                                                                               |
 | 6    | Available          |                                                                                                               |
 | 7    | Available          |                                                                                                               |
-| 8    | **Sebastian Jensen**          | Coming soon!                                                                                                              |
+| 8    | **Sebastian Jensen**          | [Create a credit card view in .NET MAUI](https://medium.com/@tsjdevapps/create-a-credit-card-view-in-net-maui-df74c20f11e0)                                                                                                              |
 | 9    | Available          |                                                                                                               |
-| 10   | Andreas Nesheim          |     Coming soon!                                                                                                          |
+| 10   | **Andreas Nesheim**          |     Coming soon!                                                                                                          |
 | 12   | Available          |                                                                                                               |
 | 12   | Available          |                                                                                                               |
 | 14   | Available          |                                                                                                               |
