--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -55,7 +55,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 7    | Available          |                                                                                                               |
 | 8    | **Sebastian Jensen**          | [Create a credit card view in .NET MAUI](https://medium.com/@tsjdevapps/create-a-credit-card-view-in-net-maui-df74c20f11e0)                                                                                                              |
 | 9    | Available          |                                                                                                               |
-| 10   | **Andreas Nesheim**          |     Coming soon!                                                                                                          |
+| 10   | **Andreas Nesheim**          |     [Replicating Wolt app (Norwegian food delivery app) in .NET MAUI](https://www.andreasnesheim.no/maui-ui-july-2023-replicating-wolt-app/)                                                                                                          |
 | 12   | Available          |                                                                                                               |
 | 12   | Available          |                                                                                                               |
 | 14   | Available          |                                                                                                               |
@@ -63,7 +63,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 16   | **Roman Jašek**          |     Coming soon!                                                                                                          |
 | 17   | **Leomaris Reyes**          | Coming soon!                                                                                                              |
 | 18   | Available          |                                                                                                               |
-| 19   | Available          |                                                                                                               |
+| 19   | **Sam Basu**          |    Coming soon!                                                                                                           |
 | 20   | **Almir Vuk**          |      Coming soon!                                                                                                         |
 | 21   | **Shaun Lawrence**          |    Coming soon!                                                                                                           |
 | 22   | **Vladislav Antonyuk**          | Coming soon!                                                                                                   |
@@ -73,7 +73,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 26   | Available          |                                                                                                               |
 | 27   | Available          |                                                                                                               |
 | 28   | **Smartman Apps**          |   Creating MAUI UIs in C#                                                                                                            |
-| 29   | Available          |                                                                                                               |
+| 29   | **Matt Lacey**          |  Coming soon!                                                                                                             |
 | 30   | Available          |                                                                                                               |
 | 31   | **Daniel Monetelli**          | Coming soon!                                                                                                              |
 {: .goldie-table }
