Added Roman's video

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -46,21 +46,21 @@ That's it! Looking forward to seeing what you all come up with. :)
 
 | Date | Person             | Content                                                                                                       |
 | ---- | ------------------ | ------------------------------------------------------------------------------------------------------------- |
-| 1    | **Matt Goldman**          |   [How to organise your handlers](/posts/handler-mappings/)                       |
+| 1    | **Matt Goldman**          |   📰 [How to organise your handlers](/posts/handler-mappings/)                       |
 | 2    | Available          |                                                                                                               |
 | 3    | Available          |                                                                                                               |
 | 4    | Available          |                                                                                                               |
 | 5    | Available          |                                                                                                               |
 | 6    | Available          |                                                                                                               |
 | 7    | Available          |                                                                                                               |
-| 8    | **Sebastian Jensen**          | [Create a credit card view in .NET MAUI](https://medium.com/@tsjdevapps/create-a-credit-card-view-in-net-maui-df74c20f11e0)                                                                                                              |
+| 8    | **Sebastian Jensen**          | 📰 [Create a credit card view in .NET MAUI](https://medium.com/@tsjdevapps/create-a-credit-card-view-in-net-maui-df74c20f11e0)                                                                                                              |
 | 9    | Available          |                                                                                                               |
-| 10   | **Andreas Nesheim**          |     [Replicating Wolt app (Norwegian food delivery app) in .NET MAUI](https://www.andreasnesheim.no/maui-ui-july-2023-replicating-wolt-app/)                                                                                                          |
+| 10   | **Andreas Nesheim**          |     📰 [Replicating Wolt app (Norwegian food delivery app) in .NET MAUI](https://www.andreasnesheim.no/maui-ui-july-2023-replicating-wolt-app/)                                                                                                          |
 | 12   | Available          |                                                                                                               |
 | 12   | Available          |                                                                                                               |
 | 14   | Available          |                                                                                                               |
 | 15   | Available          |                                                                                                               |
-| 16   | **Roman Jašek**          |     Coming soon!                                                                                                          |
+| 16   | **Roman Jašek**          |     📺 [MAUI Form-factor customizations](https://www.youtube.com/watch?v=YdjOx6SmKco)                                                                                                          |
 | 17   | **Leomaris Reyes**          | Coming soon!                                                                                                              |
 | 18   | Available          |                                                                                                               |
 | 19   | **Sam Basu**          |    Coming soon!                                                                                                           |
