--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -61,7 +61,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 14   | Available          |                                                                                                               |
 | 15   | Available          |                                                                                                               |
 | 16   | **Roman Jašek**          |     📺 [MAUI Form-factor customizations](https://www.youtube.com/watch?v=YdjOx6SmKco)                                                                                                          |
-| 17   | **Leomaris Reyes**          | Coming soon!                                                                                                              |
+| 17   | **Leomaris Reyes**          | 📰 Replicating Uber Delivery UI in .NET MAUI [English](https://askxammy.com/replicating-uber-delivery-ui-in-net-maui/)  [Spanish](https://es.askxammy.com/replicando-ui-de-entrega-de-pedidos-de-uber-en-net-maui/)                                                                                                              |
 | 18   | Available          |                                                                                                               |
 | 19   | **Sam Basu**          |    Coming soon!                                                                                                           |
 | 20   | **Almir Vuk**          |      Coming soon!                                                                                                         |
