--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -62,11 +62,11 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 15   | Available          |                                                                                                               |
 | 16   | **Roman Jašek**          |     📺 [MAUI Form-factor customizations](https://www.youtube.com/watch?v=YdjOx6SmKco)                                                                                                          |
 | 17   | **Leomaris Reyes**          | 📰 Replicating Uber Delivery UI in .NET MAUI [English](https://askxammy.com/replicating-uber-delivery-ui-in-net-maui/)  [Spanish](https://es.askxammy.com/replicando-ui-de-entrega-de-pedidos-de-uber-en-net-maui/)                                                                                                              |
-| 18   | Available          |                                                                                                               |
+| 18   | **Vladislav Antonyuk**          |  [Adding a custom action button to Shell tab bar](https://vladislavantonyuk.github.io/articles/Adding-custom-action-button-to-.NET-MAUI-Shell-TabBar/)                                                                                                             |
 | 19   | **Sam Basu**          |    Coming soon!                                                                                                           |
 | 20   | **Almir Vuk**          |      Coming soon!                                                                                                         |
 | 21   | **Shaun Lawrence**          |    Coming soon!                                                                                                           |
-| 22   | **Vladislav Antonyuk**          | Coming soon!                                                                                                   |
+| 22   | Available          |                                                                                                    |
 | 23   | **Luis Beltran**          |      Coming soon!                                                                                                         |
 | 24   | **Héctor Pérez Rojas**          |         Coming soon!                                                                                                      |
 | 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
