--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -65,7 +65,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 18   | **Vladislav Antonyuk**          |  [Adding a custom action button to Shell tab bar](https://vladislavantonyuk.github.io/articles/Adding-custom-action-button-to-.NET-MAUI-Shell-TabBar/)                                                                                                             |
 | 19   | **Sam Basu**          |    [Going Native with Blazor](https://www.telerik.com/blogs/going-native-blazor)                                                                                                          |
 | 20   | **Almir Vuk**          |      📰 [Let's play with CollectionView](https://almirvuk.com/lets-play-with-collectionview-layouts-in-net-maui/)                                                                                                         |
-| 21   | **Shaun Lawrence**          |    📰 [Building a sliding puzzle game in .NET MAUI - Intro](https://blog.bijington.com/2023/07/20/building-a-sliding-puzzle-in-dotnet-maui-part-0.html)                                                                                                           |
+| 21   | **Shaun Lawrence**          |    📰 [Building a sliding puzzle game in .NET MAUI - Parts 1 - 5](https://blog.bijington.com/2023/07/20/building-a-sliding-puzzle-in-dotnet-maui-part-0.html)                                                                                                           |
 | 22   | Available          |                                                                                                    |
 | 23   | **Luis Beltran**          |      Coming soon!                                                                                                         |
 | 24   | **Héctor Pérez Rojas**          |         Coming soon!                                                                                                      |
