Added Flavio for 27th

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -71,7 +71,7 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 24   | **Héctor Pérez Rojas**          |         Coming soon!                                                                                                      |
 | 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
 | 26   | Available          |                                                                                                               |
-| 27   | Available          |                                                                                                               |
+| 27   | **Flavio Gonclaves**          |    Coming soon!                                                                                                           |
 | 28   | **Smartman Apps**          |   Creating MAUI UIs in C#                                                                                                            |
 | 29   | **Matt Lacey**          |  Coming soon!                                                                                                             |
 | 30   | Available          |                                                                                                               |
