Added Luis Beltran and Hector Perez Rojas

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -67,8 +67,8 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 20   | **Almir Vuk**          |      📰 [Let's play with CollectionView](https://almirvuk.com/lets-play-with-collectionview-layouts-in-net-maui/)                                                                                                         |
 | 21   | **Shaun Lawrence**          |    📰 [Building a sliding puzzle game in .NET MAUI - Parts 1 - 5](https://blog.bijington.com/2023/07/20/building-a-sliding-puzzle-in-dotnet-maui-part-0.html)                                                                                                           |
 | 22   | Available          |                                                                                                    |
-| 23   | **Luis Beltran**          |      Coming soon!                                                                                                         |
-| 24   | **Héctor Pérez Rojas**          |         Coming soon!                                                                                                      |
+| 23   | **Luis Beltran**          |      📰 [Drawing Xmas Shapes in .NET MAUI](https://dev.to/icebeam7/drawing-x-mas-controls-in-net-maui-3342)                                                                                                         |
+| 24   | **Héctor Pérez Rojas**          |         📺 .NET MAUI UI Challenge - Coffee Shop App [English](https://www.youtube.com/watch?v=soz4o0zKars) [Spanish](https://www.youtube.com/watch?v=z2Eti_JYbkw)                                                                                                     |
 | 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
 | 26   | Available          |                                                                                                               |
 | 27   | **Flavio Gonclaves**          |    Coming soon!                                                                                                           |
