All but Daniel M and Mark A completed

--- a/_posts/2023-06-07-maui-ui-july-23.md
+++ b/_posts/2023-06-07-maui-ui-july-23.md
@@ -71,10 +71,10 @@ That's it! Looking forward to seeing what you all come up with. :)
 | 24   | **Héctor Pérez Rojas**          |         📺 .NET MAUI UI Challenge - Coffee Shop App [English](https://www.youtube.com/watch?v=soz4o0zKars) [Spanish](https://www.youtube.com/watch?v=z2Eti_JYbkw)                                                                                                     |
 | 25   | **Mark Allibone**          |        Coming soon!                                                                                                       |
 | 26   | Available          |                                                                                                               |
-| 27   | **Flavio Gonclaves**          |    Coming soon!                                                                                                           |
-| 28   | **Smartman Apps**          |   Creating MAUI UIs in C#                                                                                                            |
-| 29   | **Matt Lacey**          |  Coming soon!                                                                                                             |
-| 30   | **Shaun Lawrence**          | Coming soon!                                                                                                              |
+| 27   | **Flavio Gonclaves**          |    📰 [Responsive Layouts in .NET MAUI with OnOrientationExtension](https://www.cayas.de/de/blog/responsive-layouts-for-dotnet-maui)                                                                                                           |
+| 28   | **Smartman Apps**          |   📰 [Creating MAUI UIs in C#](https://dev.to/smartmanapps/creating-maui-uis-in-c-1adf)                                                                                                            |
+| 29   | **Matt Lacey**          |      📰 [Why does writing XAML have to be so slow?](https://www.mrlacey.com/2023/07/why-does-writing-xaml-have-to-be-so-slow.html)                                                                                                   |
+| 30   | **Shaun Lawrence**          | 📰 [Building a sliding puzzle game in .NET MAUI - Part 6](https://blog.bijington.com/2023/07/29/building-a-sliding-puzzle-in-dotnet-maui-part-6.html)     📰 [Part 7](https://blog.bijington.com/2023/07/29/building-a-sliding-puzzle-in-dotnet-maui-part-7.html)                                                                                                                 |
 | 31   | **Daniel Monetelli**          | Coming soon!                                                                                                              |
 {: .goldie-table }
 
