Minor fix tweaks

--- a/_posts/2023-10-23-ef-gotcha.md
+++ b/_posts/2023-10-23-ef-gotcha.md
@@ -151,6 +151,6 @@ In this case, the current version supports .NET 6 and above, so the template now
 
 ## Conclusion
 
-If you've been spotting unexpected exceptions when creating or applying migrations recently, it's likely you have some global exception handling and you've updated from .NET 6 to .NET 7 (or, more specifically, EF Core 6 to EF Core 7) or above. Although these particular are harmless, filtering them from your logs can simplify troubleshooting and is easy to do.
+If you've been seeing unexpected exceptions when creating or applying migrations recently, it's likely you have some global exception handling and you've updated from .NET 6 to .NET 7 (or, more specifically, EF Core 6 to EF Core 7) or above. Although these particular exceptions are harmless, filtering them from your logs can simplify troubleshooting and is easy to do.
 
 Have you been seeing this exception? If so, I hope you found this useful. Let me know!
