--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -49,39 +49,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person       | Content |
-| ---- | ------------ | ------- |
-| 1    | Matt Goldman | TBC     |
-| 2    | Available    |         |
-| 3    | Available    |         |
-| 4    | Available    |         |
-| 5    | Available    |         |
-| 6    | Available    |         |
-| 7    | Available    |         |
-| 8    | Available    |         |
-| 9    | Available    |         |
-| 10   | Available    |         |
-| 11   | Available    |         |
-| 12   | Available    |         |
-| 13   | Available    |         |
-| 14   | Available    |         |
-| 15   | Available    |         |
-| 16   | Available    |         |
-| 17   | Available    |         |
-| 18   | Available    |         |
-| 19   | Available    |         |
-| 20   | Available    |         |
-| 21   | Available    |         |
-| 22   | Available    |         |
-| 23   | Available    |         |
-| 24   | Available    |         |
-| 25   | Available    |         |
-| 26   | Available    |         |
-| 27   | Available    |         |
-| 28   | Available    |         |
-| 29   | Available    |         |
-| 30   | Available    |         |
-| 31   | Available    |         |
+| Date | Person        | Content |
+| ---- | ------------- | ------- |
+| 1    | Matt Goldman  | TBC     |
+| 2    | David Ortinau | TBC     |
+| 3    | Available     |         |
+| 4    | Available     |         |
+| 5    | Available     |         |
+| 6    | Available     |         |
+| 7    | Available     |         |
+| 8    | Available     |         |
+| 9    | Available     |         |
+| 10   | Available     |         |
+| 11   | Available     |         |
+| 12   | Available     |         |
+| 13   | Available     |         |
+| 14   | Available     |         |
+| 15   | Available     |         |
+| 16   | Available     |         |
+| 17   | Available     |         |
+| 18   | Available     |         |
+| 19   | Available     |         |
+| 20   | Available     |         |
+| 21   | Available     |         |
+| 22   | Available     |         |
+| 23   | Available     |         |
+| 24   | Available     |         |
+| 25   | Available     |         |
+| 26   | Available     |         |
+| 27   | Available     |         |
+| 28   | Available     |         |
+| 29   | David Ortinau | TBC     |
+| 30   | Available     |         |
+| 31   | Available     |         |
 
 {: .goldie-table }
 
