--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -49,39 +49,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person         | Content |
-| ---- | -------------- | ------- |
-| 1    | Matt Goldman   | TBA     |
-| 2    | David Ortinau  | TBA     |
-| 3    | Luis Beltran   | TBA     |
-| 4    | Available      |         |
-| 5    | Available      |         |
-| 6    | Available      |         |
-| 7    | Available      |         |
-| 8    | Available      |         |
-| 9    | Available      |         |
-| 10   | Available      |         |
-| 11   | Available      |         |
-| 12   | Available      |         |
-| 13   | Available      |         |
-| 14   | Available      |         |
-| 15   | Available      |         |
-| 16   | Available      |         |
-| 17   | Available      |         |
-| 18   | Available      |         |
-| 19   | Available      |         |
-| 20   | Shaun Lawrence | TBA     |
-| 21   | Nick Alonge    | TBA     |
-| 22   | Available      |         |
-| 23   | Available      |         |
-| 24   | Available      |         |
-| 25   | Available      |         |
-| 26   | Matt Goldman   | TBA     |
-| 27   | Available      |         |
-| 28   | Available      |         |
-| 29   | David Ortinau  | TBA     |
-| 30   | Available      |         |
-| 31   | Available      |         |
+| Date | Person          | Content                                                                        |
+| ---- | --------------- | ------------------------------------------------------------------------------ |
+| 1    | Matt Goldman    | Adding a parallax effect to CollectionView                                     |
+| 2    | David Ortinau   | TBA                                                                            |
+| 3    | Luis Beltran    | TBA                                                                            |
+| 4    | Available       |                                                                                |
+| 5    | Available       |                                                                                |
+| 6    | Available       |                                                                                |
+| 7    | Available       |                                                                                |
+| 8    | Available       |                                                                                |
+| 9    | Available       |                                                                                |
+| 10   | Available       |                                                                                |
+| 11   | Available       |                                                                                |
+| 12   | Available       |                                                                                |
+| 13   | Available       |                                                                                |
+| 14   | Available       |                                                                                |
+| 15   | Available       |                                                                                |
+| 16   | Available       |                                                                                |
+| 17   | Available       |                                                                                |
+| 18   | Available       |                                                                                |
+| 19   | Available       |                                                                                |
+| 20   | Shaun Lawrence  | TBA                                                                            |
+| 21   | Nick Alonge     | TBA                                                                            |
+| 22   | Available       |                                                                                |
+| 23   | Available       |                                                                                |
+| 24   | Available       |                                                                                |
+| 25   | Available       |                                                                                |
+| 26   | Matt Goldman    | Passing through attached behaviors to a child control                          |
+| 27   | Available       |                                                                                |
+| 28   | Available       |                                                                                |
+| 29   | David Ortinau   | TBA                                                                            |
+| 30   | Tanaka Mawere   | TBA                                                                            |
+| 31   | Brandon Minnick | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup |
 
 {: .goldie-table }
 
