Added topic to Tanaka

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -80,7 +80,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 27   | Available        |                                                                                |
 | 28   | Available        |                                                                                |
 | 29   | David Ortinau    | TBA                                                                            |
-| 30   | Tanaka Mawere    | TBA                                                                            |
+| 30   | Tanaka Mawere    | Making an InDrive/Uber clone using MAUI                                        |
 | 31   | Brandon Minnick  | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup |
 
 {: .goldie-table }
