Added missing TBA to Sebastian

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -57,7 +57,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 4    | Available        |                                                                                |
 | 5    | Available        |                                                                                |
 | 6    | Available        |                                                                                |
-| 7    | Sebastian Jensen |                                                                                |
+| 7    | Sebastian Jensen | TBA                                                                            |
 | 8    | Available        |                                                                                |
 | 9    | Available        |                                                                                |
 | 10   | Available        |                                                                                |
