--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -59,7 +59,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 6    | Available           |                                                                                |
 | 7    | Sebastian Jensen    | TBA                                                                            |
 | 8    | Available           |                                                                                |
-| 9    | Available           |                                                                                |
+| 9    | Mark Allibone       | Getting fit with MAUIReactor                                                   |
 | 10   | Available           |                                                                                |
 | 11   | Available           |                                                                                |
 | 12   | Available           |                                                                                |
