Added Daniel Monettelli

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -78,7 +78,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 25   | Pavle Davitković    | TBA                                                                            |
 | 26   | Matt Goldman        | Passing through attached behaviors to a child control                          |
 | 27   | Available           |                                                                                |
-| 28   | Available           |                                                                                |
+| 28   | Daniel Monettelli   | TBA                                                                            |
 | 29   | David Ortinau       | TBA                                                                            |
 | 30   | Tanaka Mawere       | Making an InDrive/Uber clone using MAUI                                        |
 | 31   | Brandon Minnick     | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup |
