--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -65,7 +65,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 12   | Available           |                                                                                |
 | 13   | Available           |                                                                                |
 | 14   | Available           |                                                                                |
-| 15   | Available           |                                                                                |
+| 15   | Nick Kovalsky       | TBA                                                                            |
 | 16   | Available           |                                                                                |
 | 17   | Available           |                                                                                |
 | 18   | Julian Ewers-Peters | TBA                                                                            |
