--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -62,7 +62,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 9    | Mark Allibone       | Getting fit with MAUIReactor                                                   |
 | 10   | Available           |                                                                                |
 | 11   | Available           |                                                                                |
-| 12   | Available           |                                                                                |
+| 12   | Anton Polkanov      | TBA                                                                            |
 | 13   | Available           |                                                                                |
 | 14   | Available           |                                                                                |
 | 15   | Nick Kovalsky       | TBA                                                                            |
