--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -77,7 +77,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 24   | Available           |                                                                                |
 | 25   | Pavle Davitković    | TBA                                                                            |
 | 26   | Matt Goldman        | Passing through attached behaviors to a child control                          |
-| 27   | Available           |                                                                                |
+| 27   | Adolfo Marinucci    | Building a task management app with MAUIReactor                                |
 | 28   | Daniel Monettelli   | TBA                                                                            |
 | 29   | David Ortinau       | TBA                                                                            |
 | 30   | Tanaka Mawere       | Making an InDrive/Uber clone using MAUI                                        |
