--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -74,7 +74,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 21   | Nick Alonge         | TBA                                                                            |
 | 22   | Available           |                                                                                |
 | 23   | Available           |                                                                                |
-| 24   | Available           |                                                                                |
+| 24   | Héctor Pérez        | TBA                                                                            |
 | 25   | Pavle Davitković    | TBA                                                                            |
 | 26   | Matt Goldman        | Passing through attached behaviors to a child control                          |
 | 27   | Adolfo Marinucci    | Building a task management app with MAUIReactor                                |
