--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -72,7 +72,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 19   | Available           |                                                                                |
 | 20   | Shaun Lawrence      | TBA                                                                            |
 | 21   | Nick Alonge         | TBA                                                                            |
-| 22   | Available           |                                                                                |
+| 22   | Sam Basu            | Waiting in Style with .NET MAUI Apps                                           |
 | 23   | David Nasi          | TBA                                                                            |
 | 24   | Héctor Pérez        | TBA                                                                            |
 | 25   | Pavle Davitković    | TBA                                                                            |
