--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -73,7 +73,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 20   | Shaun Lawrence      | TBA                                                                            |
 | 21   | Nick Alonge         | TBA                                                                            |
 | 22   | Sam Basu            | Waiting in Style with .NET MAUI Apps                                           |
-| 23   | David Nasi          | TBA                                                                            |
+| 23   | David Nsai          | TBA                                                                            |
 | 24   | Héctor Pérez        | TBA                                                                            |
 | 25   | Pavle Davitković    | TBA                                                                            |
 | 26   | Matt Goldman        | Passing through attached behaviors to a child control                          |
