--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -69,14 +69,14 @@ These are just examples. If you think something is interesting, there's a good c
 | 16   | Available           |                                                                                |
 | 17   | Available           |                                                                                |
 | 18   | Julian Ewers-Peters | TBA                                                                            |
-| 19   | Available           |                                                                                |
+| 19   | Matt Goldman        | Passing through attached behaviors to a child control                          |
 | 20   | Shaun Lawrence      | TBA                                                                            |
 | 21   | Nick Alonge         | TBA                                                                            |
 | 22   | Sam Basu            | Waiting in Style with .NET MAUI Apps                                           |
 | 23   | David Nsai          | TBA                                                                            |
 | 24   | Héctor Pérez        | TBA                                                                            |
 | 25   | Pavle Davitković    | TBA                                                                            |
-| 26   | Matt Goldman        | Passing through attached behaviors to a child control                          |
+| 26   | Farshad Momtaz      | TBA                                                                            |
 | 27   | Adolfo Marinucci    | Building a task management app with MAUIReactor                                |
 | 28   | Daniel Monettelli   | TBA                                                                            |
 | 29   | David Ortinau       | TBA                                                                            |
