--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -67,7 +67,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 14   | Available                |                                                                                |
 | 15   | Nick Kovalsky            | TBA                                                                            |
 | 16   | Roman Jasek              | TBA                                                                            |
-| 17   | Available                |                                                                                |
+| 17   | Diego Rivero             | TBA                                                                            |
 | 18   | Julian Ewers-Peters      | TBA                                                                            |
 | 19   | Matt Goldman             | Passing through attached behaviors to a child control                          |
 | 20   | Shaun Lawrence           | TBA                                                                            |
