--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -63,8 +63,8 @@ These are just examples. If you think something is interesting, there's a good c
 | 10   | Available                |                                                                                |
 | 11   | Matthew Robbins & SSW TV | Building Red Point                                                             |
 | 12   | Anton Polkanov           | TBA                                                                            |
-| 13   | Available                |                                                                                |
-| 14   | Available                |                                                                                |
+| 13   | Michael Stonis           | .NEt MAUI Bottom Sheet                                                         |
+| 14   | Michael Stonis           | In-page Navigation                                                             |
 | 15   | Nick Kovalsky            | TBA                                                                            |
 | 16   | Roman Jasek              | TBA                                                                            |
 | 17   | Diego Rivero             | TBA                                                                            |
