Added Daniel Quintero Henao

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -60,7 +60,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 7    | Sebastian Jensen         | TBA                                                                            |
 | 8    | Available                |                                                                                |
 | 9    | Mark Allibone            | Getting fit with MAUIReactor                                                   |
-| 10   | Available                |                                                                                |
+| 10   | Daniel Quintero Henao    | TBA                                                                            |
 | 11   | Matthew Robbins & SSW TV | Building Red Point                                                             |
 | 12   | Anton Polkanov           | TBA                                                                            |
 | 13   | Michael Stonis           | .NEt MAUI Bottom Sheet                                                         |
