--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -58,7 +58,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 5    | Available                |                                                                                |
 | 6    | Available                |                                                                                |
 | 7    | Sebastian Jensen         | TBA                                                                            |
-| 8    | Available                |                                                                                |
+| 8    | Roman Jasek              | TBA                                                                            |
 | 9    | Mark Allibone            | Getting fit with MAUIReactor                                                   |
 | 10   | Daniel Quintero Henao    | TBA                                                                            |
 | 11   | Matthew Robbins & SSW TV | Building Red Point                                                             |
