Added Vlad plus typos

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -54,7 +54,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 1    | Matt Goldman             | Adding a parallax effect to CollectionView                                     |
 | 2    | David Ortinau            | TBA                                                                            |
 | 3    | Luis Beltran             | TBA                                                                            |
-| 4    | Available                |                                                                                |
+| 4    | Vladislav Antonyuk       | Barcod scanning with .NET MAUI                                                 |
 | 5    | Available                |                                                                                |
 | 6    | Available                |                                                                                |
 | 7    | Sebastian Jensen         | TBA                                                                            |
@@ -63,7 +63,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 10   | Daniel Quintero Henao    | TBA                                                                            |
 | 11   | Matthew Robbins & SSW TV | Building Red Point                                                             |
 | 12   | Anton Polkanov           | TBA                                                                            |
-| 13   | Michael Stonis           | .NEt MAUI Bottom Sheet                                                         |
+| 13   | Michael Stonis           | .NET MAUI Bottom Sheet                                                         |
 | 14   | Michael Stonis           | In-page Navigation                                                             |
 | 15   | Nick Kovalsky            | TBA                                                                            |
 | 16   | Roman Jasek              | TBA                                                                            |
